# docs/swagger.json
@@ -44,12 +44,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"message\": \"login successful\"}",
+                        "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/handler.LoginResponse"
                         }
                     },
                     "400": {
@@ -228,6 +225,15 @@
         }
     },
     "definitions": {
+        "handler.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "login successful"
+                }
+            }
+        },
         "handler.PostUrlBody": {
             "type": "object",
             "properties": {
